<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvTitle"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="16dp"
        android:background="#FEFEFE"
        android:layout_marginBottom="24dp"/>
    <EditText
        android:id="@+id/etGameTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:hint="@string/etGameTag"
        android:importantForAutofill="no"
        android:inputType="text"
        android:layout_marginBottom="24dp"/>
    <CheckBox
        android:id="@+id/cbVLR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cbVLR"
        android:padding="16dp"
        android:foreground="?attr/selectableItemBackground" />

    <CheckBox
        android:id="@+id/cbLOL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cbLOL"
        android:padding="16dp"
        android:foreground="?attr/selectableItemBackground"/>

    <CheckBox
        android:id="@+id/cbTFT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cbTFT"
        android:padding="16dp"
        android:foreground="?attr/selectableItemBackground"/>

    <CheckBox
        android:id="@+id/cbFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cbFF"
        android:padding="16dp"
        android:foreground="?attr/selectableItemBackground"/>

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCreate"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:enabled="false"/>
</LinearLayout>